# arves

./: .dockerignore  .gitignore  ARVES_00_Amendments_CCP_Batch_1_v1.docx  ARVES_00_Baseline_v1.docx  ARVES_00_Documentation_Index_v2.2.docx  ARVES_00_Invariant_Registry_v1.docx  ARVES_00_Specification_Freeze_Record_v1.docx  ARVES_19_Canonical_Ontology_v1.docx  ARVES_20_Service_Catalog_v1.docx  ARVES_21_Event_Catalog_v1.docx  ARVES_22_Data_Catalog_v1.docx  ARVES_23_Agent_Catalog_v1.docx  ARVES_26_Master_Backlog_v1.docx  ARVES_BUILD_PROGRAM_CLOSURE.md  ARVES_COMPLETION_MAP.md  ARVES_Engine_Graph_Specification_v1.docx  ARVES_OS_Volume_1_Engineering_Constitution_v1.docx  ARVES_OS_Volume_5_Distributed_Systems_Playbook_v1.docx  ARVES_OS_Volume_6_Certification_Review_Manual_v1.docx  ARVES_Volume_10_Engineering_Bible_v1.docx  ARVES_Volume_11_Capability_Atlas_v1.docx  ARVES_Volume_13_Ontology_Knowledge_Atlas_v1.docx  ARVES_Volume_14_Agent_Architecture_Atlas_v1.docx  ARVES_Volume_1_Foundation_Constitution_v2.docx  ARVES_Volume_4_Cognitive_Core_Bible_v1.docx  ARVES_Volume_5_Strategic_Core_Bible_v1.docx  ARVES_Volume_7_Evolution_Core_Bible_v1.docx  ARVES_Volume_8_Embodied_Core_Bible_v1.docx  ARVES_Volume_9_Runtime_Event_Fabric_Bible_v1.docx  CHALLENGE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAILURE.md  FOUNDATION.md  IMPLEMENTING_ARVES.md  LICENSE  QUICKSTART.md  README.md  (+5 more)
.claude/: settings.local.json
.github/: CODEOWNERS
corpus/: ARVES_00_Gap_Analysis_v1.docx  (+25 more)
runtime/: .gitignore  Cargo.toml  README.md  RUNTIME_FREEZE_v1.0.md
runtime/crates/arves-acs/: Cargo.toml
runtime/crates/arves-acs/src/: cbor.rs  lib.rs
runtime/crates/arves-acs/tests/: acs_platform.rs
runtime/crates/arves-bridge/: Cargo.toml
runtime/crates/arves-bridge/src/: lib.rs
runtime/crates/arves-capability-fabric/: Cargo.toml
runtime/crates/arves-capability-fabric/src/: gate.rs  lib.rs  lifecycle.rs
runtime/crates/arves-capability-fabric/tests/: fabric_core.rs
runtime/crates/arves-conformance/: Cargo.toml
runtime/crates/arves-conformance/src/: acs.rs  lib.rs  live.rs  property_check.rs  semantic.rs
runtime/crates/arves-conformance/tests/: architecture_gate.rs
runtime/crates/arves-consensus/: Cargo.toml
runtime/crates/arves-consensus/src/: lib.rs  raft.rs  sim.rs  transport.rs
runtime/crates/arves-consensus/tests/: joint_membership.rs  multiprocess.rs  raft_adversarial.rs  raft_safety.rs  shard_map.rs
runtime/crates/arves-control-plane/: Cargo.toml
runtime/crates/arves-control-plane/src/: agents.rs  lib.rs  multi_agent.rs  scheduler.rs
runtime/crates/arves-control-plane/tests/: adversarial_scheduling.rs  agent_identity.rs  cluster_scheduling.rs  multi_agent_adversarial.rs  multi_agent_orchestration.rs
runtime/crates/arves-engine-fabric/: Cargo.toml
runtime/crates/arves-engine-fabric/src/: lib.rs
runtime/crates/arves-execution/: Cargo.toml
runtime/crates/arves-execution/src/: lib.rs
runtime/crates/arves-information-platform/: Cargo.toml
runtime/crates/arves-information-platform/src/: lib.rs
runtime/crates/arves-invariants/: Cargo.toml
runtime/crates/arves-invariants/src/: lib.rs
runtime/crates/arves-kernel/: Cargo.toml
runtime/crates/arves-kernel/src/: auth.rs  cluster.rs  lib.rs
runtime/crates/arves-kernel/tests/: authenticated_commit.rs  checkpoint.rs  cluster_adversarial.rs  cluster_kernel.rs  group_commit.rs  model_code_conformance.rs  persistent_wal.rs  recovery.rs  walking_skeleton.rs
runtime/crates/arves-lcw/: Cargo.toml
runtime/crates/arves-lcw/src/: lib.rs  world.rs
runtime/crates/arves-lcw/tests/: shared_world.rs
runtime/crates/arves-ontology/: Cargo.toml
runtime/crates/arves-ontology/src/: lib.rs
runtime/crates/arves-persistence/: Cargo.toml
runtime/crates/arves-persistence/src/: lib.rs
runtime/crates/arves-persistence/tests/: checkpoint.rs  file_wal.rs  group_commit.rs  recovery.rs
runtime/crates/arves-query/: Cargo.toml
runtime/crates/arves-query/src/: distributed.rs  lib.rs  projection.rs
runtime/crates/arves-query/tests/: adversarial_reads.rs  distributed_query.rs  query_core.rs
runtime/crates/arves-runtime/: Cargo.toml
runtime/crates/arves-runtime/src/: main.rs
runtime/crates/arves-runtime/tests/: real_restart.rs
runtime/docs/: ARVES_Master_Roadmap.md  ENGINEERING_DOCTRINE.md  I1.5_Persistent_WAL_Design.md  I1.6_Checkpoint_Semantics_Design.md  I1.7_Recovery_Design.md  I1_Engineering_Design.md  I1_Retrospective.md  I2.0_Engineering_Design.md  IMPLEMENTATION_PROGRESS.md  RT-001_Reference_Runtime_Interface_Evolution.md
runtime/docs/organization/: ARVES_Engineering_Organization.md  PMO_Backlog_001.md  PMO_Backlog_002.md
runtime/docs/reviews/: 00_ARVES_v2_Global_Readiness_Report.md  P01_independent-runtime-challenge.md  P02_academic-review.md  P03_iso-readiness.md  P04_independent-implementation-design.md  P05_formal-verification.md  P06_scalability.md  P07_security-zero-trust.md  P08_failure-engineering.md  P09_ecosystem.md  P10_product-strategy.md  P11_reference-implementation-audit.md  P12_twenty-year-review.md
runtime/docs/standards/: ACS-001_CCP-001_Content_Addressing.md  ACS-002_CCP-002_Canonical_Serialization.md  ACS-003_CCP-003_Canonical_Envelope.md  ACS-004_CCP-004_Universal_Type_Registry.md  ACS_Batch_1_Consistency_Report.md  ARVES_v1.1_Standardization_Program.md  CCP-005_Normative_Language_and_Glossary.md
runtime/rcr/: RCR-001.md  RCR-002.md  RCR-003.md  RCR-004.md  RCR-004b.md  RCR-005.md  RCR-006.md  RCR-007.md  RCR-008.md  RCR-009.md  RCR-010.md  RCR-011.md  RCR-012.md  RCR-013.md  RCR-014.md  RCR-015.md  RCR-016.md  RCR-017.md  RCR-018.md  RCR-019.md  RCR-020.md  RCR-021.md  RCR-022.md  RCR-023.md  RCR-024.md  RCR-025.md  RCR-026.md  RCR-027.md  RCR-028.md  RCR-029.md  RCR-030.md  RCR-031.md  RCR-032.md  RCR-033.md  RCR-034.md  RCR-035.md  RCR-036.md  RCR-037.md  RCR-038.md  RCR-039.md  (+1 more)
verification/industrial/: Cargo.toml  L4_REPORT.md  README.md  run.sh
verification/industrial/src/: lib.rs
verification/industrial/tests/: fault_injection.rs  performance.rs  replay_equivalence.rs
(+360 files in other folders)
