[package]
name = "arves-bridge"
version = "0.0.0"
edition = "2021"
publish = false

# The SDK<->Kernel bridge: the single seam between the product/SDK world and the
# reference runtime. It binds the Kernel's opaque ContentHash to the ACS-001 content
# address, so the SDK and the Kernel share ONE identity (no "two worlds"). This is the
# point at which the Kernel consumes the ACS standard.

[dependencies]
arves-kernel = { path = "../arves-kernel" }
arves-persistence = { path = "../arves-persistence" }
arves-acs = { path = "../arves-acs" }
arves-engine-fabric = { path = "../arves-engine-fabric" }
arves-capability-fabric = { path = "../arves-capability-fabric" }
# RCR-033: the read-only WAL-scan verb reconstructs a shard's committed set through the
# Query layer's ShardProjection (downward edge 105 -> 60; Query owns "Read projections",
# never a write path). RCR-034: the attributed-commit verb carries the I5 agent
# attribution envelope (downward edge 105 -> 90) into committed truth the runtime way.
arves-query = { path = "../arves-query" }
arves-control-plane = { path = "../arves-control-plane" }
