[package]
name = "arves-conformance"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
arves-acs = { path = "../arves-acs" }
# RCR-008: the live L1 conformance runner drives the real Kernel to emit a ConformanceArtifact.
# LAYER-001: conformance (rank 110, the test harness "may read all") -> kernel (40) / persistence
# (20) are DOWNWARD edges (legal); the architecture gate confirms this.
arves-kernel = { path = "../arves-kernel" }
arves-persistence = { path = "../arves-persistence" }
# RCR-022: the live DISTRIBUTED scenario (I2 design §5.2 S-I2-6 / §4 SHARD-001 row) drives the
# ClusterKernel over the per-shard Raft substrate. LAYER-001: conformance (rank 110) ->
# consensus (30) is a DOWNWARD edge (legal); the architecture gate confirms this.
arves-consensus = { path = "../arves-consensus" }
# RCR-025 (I3 Stage 3): the live DISTRIBUTED QUERY scenario (I3 design §5.1 "Enterprise
# Knowledge Query" / §5.2 evidence ladder) drives the `arves-query` implementation
# (WAL-replay projections behind the frozen Query trait, RCR-023/024) over the cluster
# substrate. LAYER-001: conformance (rank 110) -> query (60) is a DOWNWARD edge (legal);
# the architecture gate confirms this.
arves-query = { path = "../arves-query" }
